--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ function shuffleArray(array) {
 }
 `
 
-trial_n_and_n = (left_n, right_n) ->
+trial_n_and_n = (left_n, right_n, n_lanes) ->
 	[left_speed, right_speed] = get_speeds()
 
 	left_ttc = Math.abs 1/left_speed
@@ -704,10 +704,10 @@ trial_n_and_n = (left_n, right_n) ->
 	right_primary.ttc = -right_primary.position.x/right_speed
 	
 	object_separation = 0.2
-	left_ys = for i in [0...left_n]
-		(i - (left_n - 1)/2)*object_separation
-	shuffleArray left_ys
-	
+	lanes = [0...n_lanes]
+	shuffleArray(lanes)
+	left_ys = for lane in lanes
+		(lane - (n_lanes - 1)/2)*object_separation
 	left_primary.position.y = left_ys[0]
 	left_objects = [left_primary]
 	for i in [1...left_n]
@@ -716,11 +716,12 @@ trial_n_and_n = (left_n, right_n) ->
 		obj.position.y = left_ys[i]
 		obj.speed = left_speed - Math.random()*0.3
 		left_objects.push obj
-
-	right_ys = for i in [0...right_n]
-		(i - (right_n - 1)/2)*object_separation
-	shuffleArray right_ys
 	
+	lanes = [0...n_lanes]
+	shuffleArray(lanes)
+	right_ys = for lane in lanes
+		(lane - (n_lanes - 1)/2)*object_separation
+	console.log right_ys
 	right_primary.position.y = right_ys[0]
 	right_objects = [right_primary]
 	for i in [1...right_n]
@@ -2170,7 +2171,8 @@ start_timed_game = ->
 			await pause_rendered 0.3
 			await trial_n_and_n(
 				Math.round(Math.random()*2) + 1,
-				Math.round(Math.random()*2) + 1
+				Math.round(Math.random()*2) + 1,
+				3
 				)
 			await new Promise (a) -> setTimeout a, 1000
 			#await pause_rendered 1.0
